bpo-37188: Fix a divide-by-zero in arrays of size-0 objects (GH-13881) (cherry picked from commit 0690c79c419b8d2bdfe7c5b6dca57b018f5a5a54)

Co-authored-by: Eric Wieser <wieser.eric@gmail.com>